[gd_scene load_steps=10 format=3 uid="uid://ckmxcyuy7jenn"]

[ext_resource type="Script" path="res://World/world.gd" id="1_4u4kk"]
[ext_resource type="PackedScene" uid="uid://dmo51rmnyy3h4" path="res://Player/player.tscn" id="2_6ygev"]
[ext_resource type="Texture2D" uid="uid://oro8upcigrmg" path="res://Textures/Ground.png" id="3_xqpl5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pkv3c"]
resource_name = "ground"
texture = ExtResource("3_xqpl5")
texture_region_size = Vector2i(34, 34)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_djg3t"]
tile_size = Vector2i(34, 34)
sources/1 = SubResource("TileSetAtlasSource_pkv3c")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofkf6"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_emt17"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oq2da"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukay7"]
size = Vector2(2, 2)

[node name="World" type="Node2D"]
script = ExtResource("1_4u4kk")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_djg3t")
format = 2

[node name="Player" parent="." instance=ExtResource("2_6ygev")]
z_index = 1

[node name="Borders" type="StaticBody2D" parent="."]
visible = false

[node name="TopBorder" type="CollisionShape2D" parent="Borders"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("RectangleShape2D_ofkf6")

[node name="LeftBorder" type="CollisionShape2D" parent="Borders"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("RectangleShape2D_emt17")

[node name="BottomBorder" type="CollisionShape2D" parent="Borders"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("RectangleShape2D_oq2da")

[node name="RightBorder" type="CollisionShape2D" parent="Borders"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("RectangleShape2D_ukay7")
